# vulkan-visualizer-plugins

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
module/: vk.plugins.camera.ixx  vk.plugins.renderer.ixx  vk.plugins.ui.ixx  vk.plugins.viewport.ixx
src/: vk.plugins.camera.cpp  vk.plugins.renderer.cpp  vk.plugins.ui.cpp  vk.plugins.viewport.cpp
test/: test_camera.cpp  test_viewport.cpp
test/shader/: viewport.frag  viewport.vert
